# Auth_sprint_1

./: .dockerignore  .env.template  .env_example  .gitignore  Dockerfile  README.md  docker-compose-test.yml  docker-compose.yml  docker-compose_local.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_02_22_1307-01_user_role_and_history_models.py  2024_02_22_1404-01_user_role_and_history_models.py  2024_02_26_1717-01_user_role_and_history_models.py  2024_02_28_1148-01_user_role_and_history_models.py  2024_02_29_1457-01_user_role_and_history_models.py  931df847e6fc_create_user_history_role_models.py
src/: main.py
src/api/: errors.py  permission.py  routers.py  v1.py
src/api/v1/: __init__.py  account.py  auth.py  history.py  roles.py
src/core/: base.py  config.py  constants.py  db.py  logger.py  settings.py
src/db/: stub.py
src/models/: __init__.py  history.py  role.py  roles.py  security.py  user.py
src/schemas/: __init__.py  history.py  responses.py  roles.py  user.py
src/services/: account.py  authentication.py  authorization.py  history.py  roles.py  users.py
src/utils/: paginate.py  passwords.py
tests/functional/fixtures/: db_fixtures.py
tests/functional/src/: test_account.py  test_auth.py  test_roles.py
